# tla-ui

./: .gitignore  Cargo.toml  LICENSE.MIT  README.md  index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
backend/: Cargo.toml  config.toml
backend/src/: main.rs
src/: Editor.js  TlaMode.js  index.js
src/components/: App.js  Codemirror.js
tla-parser/: Cargo.toml
tla-parser/src/: lexer.rs  lib.rs  parser.rs  tla.pest
tla-parser/src/lexer/: base.rs  combinators.rs  mod.rs  token_type.rs
tla-parser/tests/: test.rs
tla-web/: Cargo.toml
tla-web/src/: lib.rs
ui/: manifest.json  package-lock.json  package.json
ui/src/: TlaMode.js  bootstrap.js  style.css
ui/src/components/: Codemirror.js
