[package]
name = "tla-parser"
version = "0.1.0"
authors = ["Max Taldykin <jorpic@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"] # NB! disable when deploying.

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
wee_alloc = "0.4.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
pest = "2.0"
pest_derive = "2.0"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
