[package]
name = "tla-web"
version = "0.1.0"
authors = ["Max Taldykin <jorpic@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.40"
wee_alloc = "0.4.2"
tla-parser = { path = "../tla-parser" }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
